# bitcoin-twitter-visual-analysis

./: .gitignore  .old_clean_tweets.py  .old_eda.py  .old_word_cloud.py  .pre-commit-config.yaml  Bitcoin_tweets_processed.csv  README.md  bitcoin_history.csv  bitcoin_tweets.csv  load.py  main.py  nlp_tasks.py  pyproject.toml  requirements.txt  visualize.py
data/processed/: Bitcoin_tweets_processed_recent.csv
data/raw/: bitcoin_history.csv  bitcoin_tweets.csv
develop/: download_stocks.py  load.py  main.py  nlp_tasks.py  preprocess.py  visualize.py
